--- a/.github/workflows/zkevm-chain.yml
+++ b/.github/workflows/zkevm-chain.yml
@@ -13,11 +13,11 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       GH_PAT: ${{ secrets.GH_PAT }}
-      AWS_DEFAULT_REGION: ap-south-1
-      IMAGE_ID: ami-0a60600ebca79fab3
-      KEY_NAME: pinkie
-      SUBNET_ID: subnet-005b28c6bd85faa5c
-      SECURITY_GROUP_ID: sg-0ec6bb25610783aeb
+      AWS_DEFAULT_REGION: us-central-1
+      IMAGE_ID: ami-06ce824c157700cd2
+      KEY_NAME: devops
+      SUBNET_ID: subnet-07ce3c81e409f4e14
+      SECURITY_GROUP_ID: sg-03c0a0de6836d583d
       REPO: privacy-scaling-explorations/zkevm-chain
     runs-on: ubuntu-latest
     concurrency:
