--- a/.github/workflows/zkevm-chain.yml
+++ b/.github/workflows/zkevm-chain.yml
@@ -13,7 +13,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       GH_PAT: ${{ secrets.GH_PAT }}
-      AWS_DEFAULT_REGION: us-central-1
+      AWS_DEFAULT_REGION: eu-central-1
       IMAGE_ID: ami-06ce824c157700cd2
       KEY_NAME: devops
       SUBNET_ID: subnet-07ce3c81e409f4e14
