--- a/.github/workflows/con.yml
+++ b/.github/workflows/con.yml
@@ -15,5 +15,4 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ consecutiveness ]
     steps:
-      run: |
-        sleep 180
+      - run: sleep 180
