--- a/.github/workflows/con.yml
+++ b/.github/workflows/con.yml
@@ -10,8 +10,8 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
 
-  bla:
+  sleep:
     runs-on: ubuntu-latest
     needs: [ consecutiveness ]
     steps:
-      - run: sleep 180
+      - run: sleep 600
