--- a/.github/workflows/con.yml
+++ b/.github/workflows/con.yml
@@ -14,6 +14,6 @@ jobs:
 
   sleep:
     runs-on: ubuntu-latest
-    needs: [ consecutiveness ]
+    #needs: [ consecutiveness ]
     steps:
       - run: sleep 600
