--- a/.github/workflows/con-cr.yml
+++ b/.github/workflows/con-cr.yml
@@ -12,11 +12,13 @@ jobs:
 
   configuration:
     name: configure aws credentials
-    uses: aws-actions/configure-aws-credentials@v1
-      with:
-        role-to-assume: arn:aws:iam::490752553772:role/GH-Actions
-        role-duration-seconds: 900
-        aws-region: eu-central-1
+
+    steps:
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: arn:aws:iam::490752553772:role/GH-Actions
+          role-duration-seconds: 900
+          aws-region: eu-central-1
 
   testrun:
     name: Test
