--- a/.github/workflows/zkevm-chain.yml
+++ b/.github/workflows/zkevm-chain.yml
@@ -10,20 +10,24 @@ jobs:
   main:
     timeout-minutes: 5
     env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       GH_PAT: ${{ secrets.GH_PAT }}
-      AWS_DEFAULT_REGION: eu-central-1
       IMAGE_ID: ami-06ce824c157700cd2
       KEY_NAME: devops
       SUBNET_ID: subnet-07ce3c81e409f4e14
       SECURITY_GROUP_ID: sg-03c0a0de6836d583d
-      #REPO: privacy-scaling-explorations/zkevm-chain
       REPO: ntampakas/github-ops
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     concurrency:
       group: ${{ github.workflow }}
       cancel-in-progress: false
     steps:
+      - uses: aws-actions/configure-aws-credentials@v1-node16
+        with:
+          role-to-assume: arn:aws:iam::490752553772:role/GH-Actions
+          role-duration-seconds: 900
+          aws-region: eu-central-1
       - uses: actions/checkout@v2
       - run: ./run.sh
