--- a/.github/workflows/con.yml
+++ b/.github/workflows/con.yml
@@ -14,7 +14,7 @@ jobs:
 
   sleep:
     #runs-on: ubuntu-latest
-    runs-on: ["${{github.run_id}}", self-hosted, t3.medium]
+    runs-on: ["${{github.run_id}}", self-hosted, c5.18xlarge]
     #needs: [ consecutiveness ]
     steps:
       - run: sleep 600
